[gd_scene load_steps=8 format=3 uid="uid://7uk6q28bro1m"]

[ext_resource type="Script" path="res://environment/world/box_with_sheep.gd" id="1_jumqg"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ay57y"]

[sub_resource type="BoxMesh" id="BoxMesh_07iad"]
material = SubResource("StandardMaterial3D_ay57y")

[sub_resource type="BoxShape3D" id="BoxShape3D_gcvi4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_wp3ux"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dy7va"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_dhhw2"]
material = SubResource("StandardMaterial3D_dy7va")

[node name="BoxWithSheep" type="StaticBody3D"]
script = ExtResource("1_jumqg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 3, 0, 0, 0)
mesh = SubResource("BoxMesh_07iad")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 3, 0, 0, 0)
shape = SubResource("BoxShape3D_gcvi4")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 2, 0, 0)
shape = SubResource("BoxShape3D_wp3ux")

[node name="ColorToAdjust" type="MeshInstance3D" parent="."]
transform = Transform3D(-1.74846e-08, 0.4, 0, -0.4, -1.74846e-08, 0, 0, 0, 1, 1.01, 0.2, 0)
mesh = SubResource("PlaneMesh_dhhw2")

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 461.0
offset_top = 340.0
offset_right = 501.0
offset_bottom = 380.0

[node name="ColorRect" type="ColorRect" parent="Control"]
z_index = -1
layout_mode = 0
offset_left = -103.0
offset_top = -29.0
offset_right = 225.0
offset_bottom = 149.0
color = Color(0, 0, 0, 0.196078)

[node name="HSliderR" type="HSlider" parent="Control"]
layout_mode = 0
offset_right = 211.0
offset_bottom = 16.0
max_value = 255.0

[node name="Label" type="Label" parent="Control/HSliderR"]
modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = -100.0
offset_top = 46.0
offset_right = -60.0
offset_bottom = 69.0
text = "G"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSliderG" type="HSlider" parent="Control"]
layout_mode = 0
offset_top = 50.0
offset_right = 211.0
offset_bottom = 66.0
max_value = 255.0

[node name="Label" type="Label" parent="Control/HSliderG"]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = -100.0
offset_top = -58.0
offset_right = -60.0
offset_bottom = -35.0
text = "R"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSliderB" type="HSlider" parent="Control"]
layout_mode = 0
offset_top = 107.0
offset_right = 211.0
offset_bottom = 123.0
max_value = 255.0

[node name="Label" type="Label" parent="Control/HSliderB"]
modulate = Color(0, 0, 1, 1)
layout_mode = 0
offset_left = -100.0
offset_top = -5.0
offset_right = -60.0
offset_bottom = 18.0
text = "B"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="value_changed" from="Control/HSliderR" to="." method="_on_h_slider_r_value_changed"]
[connection signal="value_changed" from="Control/HSliderG" to="." method="_on_h_slider_g_value_changed"]
[connection signal="value_changed" from="Control/HSliderB" to="." method="_on_h_slider_b_value_changed"]
